Bug 1523904 - Fix crash in nsAbCardProperty::SetUID(). r=darktrojan